--- a/styles.css
+++ b/styles.css
@@ -544,20 +544,27 @@ aside{
 .global-scale{
     padding-top: 12rem;
     position: relative;
-    overflow-x: visible;
+    overflow: visible;
+}
+
+.graphic-cont{
+    position: absolute;
+
 }
 
 .global-graphic{
     position: absolute;
-    width: 844px;
+    width: 800px;
     opacity: 0.2;
-    left: 650px;
-    top: 150px;
+    left: 250px;
+    top: 0px;
     overflow: hidden;
 }
 
 .global{
     position: relative;
+    overflow: hidden;
+    width: 100vw;
 }
 
 .global-scale::before{
